<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/cabConfirmSelection"
        android:icon="@drawable/ic_check"
        android:title="@string/confirm_selection"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/cabDelete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/cabShare"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
    <item
        android:icon="@drawable/ic_rotate_right"
        android:title="@string/rotate"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/cabRotateRight"
                android:title="@string/rotate_right" />
            <item
                android:id="@+id/cabRotateLeft"
                android:title="@string/rotate_left" />
            <item
                android:id="@+id/cabRotateOneEighty"
                android:title="@string/rotate_one_eighty" />
        </menu>
    </item>
    <item
        android:id="@+id/cabProperties"
        android:icon="@drawable/ic_info"
        android:title="@string/properties"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/cabRename"
        android:icon="@drawable/ic_rename_new"
        android:title="@string/rename"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/cabHide"
        android:icon="@drawable/ic_hide"
        android:title="@string/hide"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/cabUnhide"
        android:icon="@drawable/ic_unhide"
        android:title="@string/unhide"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/cabEdit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/cabSelectAll"
        android:icon="@drawable/ic_select_all"
        android:title="@string/select_all"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/cabAddToFavorites"
        android:icon="@drawable/ic_star_off"
        android:title="@string/add_to_favorites"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/cabRemoveFromFavorites"
        android:icon="@drawable/ic_star_on"
        android:title="@string/remove_from_favorites"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/cabRestoreRecycleBinFiles"
        android:title="@string/restore_selected_files"
        app:showAsAction="never" />
    <item
        android:id="@+id/cabFixDateTaken"
        android:title="@string/fix_date_taken"
        app:showAsAction="never" />
    <item
        android:id="@+id/cabOpenWith"
        android:title="@string/open_with"
        app:showAsAction="never" />
    <item
        android:id="@+id/cabSetAs"
        android:title="@string/set_as"
        app:showAsAction="never" />
    <item
        android:id="@+id/cabCopyTo"
        android:title="@string/copy_to"
        app:showAsAction="never" />
    <item
        android:id="@+id/cabMoveTo"
        android:title="@string/move_to"
        app:showAsAction="never" />
</menu>
