<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuShare"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuProperties"
        android:icon="@drawable/ic_info"
        android:title="@string/properties"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuEdit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuSetAs"
        android:icon="@drawable/ic_set_as"
        android:title="@string/set_as"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuOpenWith"
        android:title="@string/open_with"
        app:showAsAction="never" />
</menu>
