<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/manageExtendedDetailsScrollview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/manageExtendedDetailsHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingTop="@dimen/medium_margin"
        android:paddingRight="@dimen/activity_margin">

        <com.roy.commons.views.MyAppCompatCheckbox
            android:id="@+id/manageExtendedDetailsName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/filename" />

        <com.roy.commons.views.MyAppCompatCheckbox
            android:id="@+id/manageExtendedDetailsPath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/path" />

        <com.roy.commons.views.MyAppCompatCheckbox
            android:id="@+id/manageExtendedDetailsSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/size" />

        <com.roy.commons.views.MyAppCompatCheckbox
            android:id="@+id/manageExtendedDetailsResolution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/resolution" />

        <com.roy.commons.views.MyAppCompatCheckbox
            android:id="@+id/manageExtendedDetailsLastModified"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/last_modified" />

        <com.roy.commons.views.MyAppCompatCheckbox
            android:id="@+id/manageExtendedDetailsDateTaken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/date_taken" />

        <com.roy.commons.views.MyAppCompatCheckbox
            android:id="@+id/manageExtendedDetailsCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/camera" />

        <com.roy.commons.views.MyAppCompatCheckbox
            android:id="@+id/manageExtendedDetailsExif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/exif" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divider_grey"
            android:importantForAccessibility="no" />

        <com.roy.commons.views.MyAppCompatCheckbox
            android:id="@+id/manageExtendedDetailsDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/duration" />

        <com.roy.commons.views.MyAppCompatCheckbox
            android:id="@+id/manageExtendedDetailsArtist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/artist" />

        <com.roy.commons.views.MyAppCompatCheckbox
            android:id="@+id/manageExtendedDetailsAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/album" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>
