<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingTop="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin">

        <RadioGroup
            android:id="@+id/sortingDialogRadioSorting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin">

            <com.roy.commons.views.MyCompatRadioButton
                android:id="@+id/sortingDialogRadioName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/name" />

            <com.roy.commons.views.MyCompatRadioButton
                android:id="@+id/sortingDialogRadioPath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/path" />

            <com.roy.commons.views.MyCompatRadioButton
                android:id="@+id/sortingDialogRadioSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/size" />

            <com.roy.commons.views.MyCompatRadioButton
                android:id="@+id/sortingDialogRadioLastModified"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/last_modified" />

            <com.roy.commons.views.MyCompatRadioButton
                android:id="@+id/sortingDialogRadioDateTaken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/date_taken" />

            <com.roy.commons.views.MyCompatRadioButton
                android:id="@+id/sortingDialogRadioRandom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/random" />

        </RadioGroup>

        <include layout="@layout/v_divider" />

        <RadioGroup
            android:id="@+id/sortingDialogRadioOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:paddingBottom="@dimen/medium_margin">

            <com.roy.commons.views.MyCompatRadioButton
                android:id="@+id/sortingDialogRadioAscending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/ascending" />

            <com.roy.commons.views.MyCompatRadioButton
                android:id="@+id/sortingDialogRadioDescending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/descending" />
        </RadioGroup>

        <include
            android:id="@+id/useForThisFolderDivider"
            layout="@layout/v_divider" />

        <com.roy.commons.views.MyAppCompatCheckbox
            android:id="@+id/sortingDialogUseForThisFolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/use_for_this_folder" />

        <com.roy.commons.views.MyTextView
            android:id="@+id/sortingDialogBottomNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/small_margin"
            android:paddingEnd="@dimen/medium_margin"
            android:text="@string/grouping_and_sorting"
            android:textSize="@dimen/smaller_text_size" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>
