<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/conflictDialogHolder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin">

    <com.eagle.commons.views.MyTextView
        android:id="@+id/conflictDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/small_margin"
        android:paddingTop="@dimen/small_margin"
        android:paddingRight="@dimen/small_margin"
        android:paddingBottom="@dimen/activity_margin"
        tools:text="File already exists" />

    <RadioGroup
        android:id="@+id/conflictDialogRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_margin">

        <com.eagle.commons.views.MyCompatRadioButton
            android:id="@+id/conflictDialogRadioSkip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:paddingTop="@dimen/normal_margin"
            android:paddingBottom="@dimen/normal_margin"
            android:text="@string/skip" />

        <com.eagle.commons.views.MyCompatRadioButton
            android:id="@+id/conflictDialogRadioOverwrite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/normal_margin"
            android:paddingBottom="@dimen/normal_margin"
            android:text="@string/overwrite" />

        <com.eagle.commons.views.MyCompatRadioButton
            android:id="@+id/conflictDialogRadioMerge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/normal_margin"
            android:paddingBottom="@dimen/normal_margin"
            android:text="@string/merge" />

        <com.eagle.commons.views.MyCompatRadioButton
            android:id="@+id/conflictDialogRadioKeepBoth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/normal_margin"
            android:paddingBottom="@dimen/normal_margin"
            android:text="@string/keep_both" />

    </RadioGroup>

    <com.eagle.commons.views.MyAppCompatCheckbox
        android:id="@+id/conflictDialogApplyToAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:paddingTop="@dimen/activity_margin"
        android:paddingBottom="@dimen/activity_margin"
        android:text="@string/apply_to_all" />

</androidx.appcompat.widget.LinearLayoutCompat>
