<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin"
        android:paddingTop="@dimen/activity_margin">

        <com.roy.commons.views.MyEditText
            android:id="@+id/dlgCustomIntervalValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:ems="6"
            android:inputType="number"
            android:maxLength="5"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/normal_text_size"/>

        <RadioGroup
            android:id="@+id/dlgRadioView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin">

            <com.roy.commons.views.MyCompatRadioButton
                android:id="@+id/dlgRadioSeconds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_margin"
                android:paddingTop="@dimen/activity_margin"
                android:text="@string/seconds_raw"/>

            <com.roy.commons.views.MyCompatRadioButton
                android:id="@+id/dlgRadioMinutes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_margin"
                android:paddingTop="@dimen/activity_margin"
                android:text="@string/minutes_raw"/>

            <com.roy.commons.views.MyCompatRadioButton
                android:id="@+id/dialogRadioHours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_margin"
                android:paddingTop="@dimen/activity_margin"
                android:text="@string/hours_raw"/>

            <com.roy.commons.views.MyCompatRadioButton
                android:id="@+id/dialogRadioDays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_margin"
                android:paddingTop="@dimen/activity_margin"
                android:text="@string/days_raw"/>

        </RadioGroup>
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>
